# smplcodec

./: .gitignore  .gitlab-ci.yml  MCS_INTERFACE_GUIDE.md  Makefile  README.md  poetry.toml  pyproject.toml
smplcodec/: __init__.py  codec.py  utils.py  version.py
test/: test_codec.py  test_mcs.py  test_utils.py
test/files/: apose_to_handsFront_smplx.npz  avatar.smpl  avatar_skel.smpl  avatar_smplpp.smpl  avatar_vertexoffsets.smpl  default.smpl  pose_avatar.smpl  single_frame_cam.json
tools/: convert_smpl_to_robot_format.py
